fix assign random stake